# fpw

./: .gitignore  README.md  pyproject.toml
docs/: .conf.py.swp  conf.py  fpw.rst  index.rst  modules.rst
docs/_build/markdown/: fpw.md  index.md  modules.md
examples/: .gitignore  BayesNN.py  barycenter.py  example.py  test_config.json  test_kRAM.py
examples/datasets/: wine.txt
manuscript/: .gitignore  Barycenter.json  Barycenter_trivial.json  EntBarycenter.json  EntBarycenter_trivial.json  KL_acceleration.json  KL_acceleration_restart.json  KL_trivial.json  Median.json  Median_trivial.json  OU_acceleration.json  OU_acceleration_restart.json  OU_acceleration_small.json  OU_trivial.json  config.json  config_repr.json  process_data.ipynb
src/fpw/: .RAMSolver.py.swp  .RAMSolverJAX.py.swp  .__init__.py.swp  .pt.py.swp  .ram.py.swp  BWRAMSolver.py  ProblemGaussian.py  PymanoptInterface.py  RAMSolver.py  RAMSolverJAX.py  __init__.py  kernelRAMSolver.py  pt.py  ram.py  test.py  utility.py
tests/: .gitignore  barycenter.py  config.json  config_repr.json  example.py  test_distribution.py  test_nonconvex.py  test_ot_estimation.py  test_ram.ipynb  test_ram.py  test_ram_gaussian.py  test_ram_jax.py
